# green_fundamentals

./: .gitignore  CMakeLists.txt  commands.txt  gold.txt  map.txt  map2.txt  maze1.pgm  maze1.yaml  notes.md  package.xml  pickup.txt
launch/: all.launch  basics.launch  basics_no_mover.launch  localization.launch  moving.launch  publish_map.launch  smooth.launch  test.launch  test_global_planner.launch  test_localization.launch  test_planner.launch
msg/: Cell.msg  Grid.msg  LaserCoordinates.msg  Obstacle.msg  Pose.msg  Position.msg  Row.msg  Velocities.msg
src/: Driver.cpp  Driver.h  align.cpp  costume_server.py  example_laser.cpp  example_moving.cpp  example_moving.py  global_planner.cpp  globalizer.cpp  go_to_goal_node.cpp  kld_localizer.cpp  local_planner.cpp  localization.py  localizer.cpp  localizer.h  localizer2.cpp  localizer_base.cpp  map_generator.cpp  monte_carlo_localization.cpp  move_to_position.py  music.cpp  obstacle_detector.cpp  occupancy_map.cpp  odometry.cpp  odometry.py  planner.cpp  publish_map.py  robot_constants.h  robot_mover.cpp  square_no_sensors.cpp  square_with_encoders.cpp  teleop.py  teleoperator.py  wanderer.cpp
src/algorithms/: find_midpoint_from_lines.cpp  ransac.cpp  ransack.cpp
src/archive/: calculate_laser_coordinates.cpp  driving_server.cpp  example_song.py  global_planner.cpp  localizer2.cpp  localizer2_addons.cpp  motion_planning_server.cpp  obstacle_detection.cpp  odometry.cpp  smooth_waypoint_drive_controller.cpp
src/archive/classes/: driver.h  line.h
src/classes/: driver.cpp  driver.h  driverUpdated.cpp  driverUpdated.h  grid_detector.cpp  grid_detector.h  line.cpp  line.h  line_detector.cpp  line_detector.h  point.cpp  point.h  vector.cpp  vector.h  wall_detector.cpp  wall_detector.h
src/driving/: cmd_vel.cpp  driving_server.cpp  smooth_waypoint_drive_controller.cpp  strickt_waypoint_drive_controller.cpp  strict_waypoint_drive_controller.cpp
src/examples/: example_laser.py  example_song.py
src/execute_plan/: execute_plan.cpp  execute_plan_old.cpp  execute_plan_server.cpp
src/grid_detection/: grid_detection_server.cpp
src/grid_detector/: grid_detection_server.cpp  grid_detector.cpp  grid_detector.h
src/motion_planning/: motion_planning_server.cpp
src/obstacle_detection/: calculate_laser_coordinates  obstacle_detection.cpp
src/odometry/: odometry.cpp
src/test/: test-ransac.cpp
src/test-input/: botton-of-cell.txt  in-the-corner.txt  point-input-30  point-input-50.txt
src/tests/: ransack_tests.cpp
srv/: DetectGrid.srv  DriveTo.srv  DriveToWaypoints.srv  ExecutePlan.srv  GetGlobalPlan.srv  GetShortestPath.srv  GoldRun.srv  MoveToPosition.srv  SetVideo.srv  StartLocalization.srv
use_eigen/: FindEigen.cmake
